--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
+    "ng2-date-picker": "^2.2.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
