--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
     "ng2-date-picker": "^2.2.0",
+    "ng2-dnd": "^4.2.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
